# Info_Lab_4term

./: README.md
Lab1/: CMakeLists.txt  cilinder.cpp  circule.cpp  cube.cpp  livesey.stl  stl.cpp  torus.cpp
Lab2/: CMakeLists.txt  Om_Nom.stl  main.cpp
